fixed content overflow/ set height

--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -75,7 +75,10 @@ body {
   letter-spacing: 1.5px;
   position: relative;
   width: 100%;
-  height: 100%;
+  /* height: calc(100vh - 90px); */
+  height: calc(100vh - 90px);
+  /* flex-grow: 1; */
+  overflow-y: scroll;
 }
 
 @keyframes ocean {
